syntax = "proto3";

import "zitadel/object.proto";

package zitadel.project.v1;

option go_package ="github.com/caos/zitadel/pkg/grpc/project";

message Project {
    string id = 1;
    zitadel.v1.ObjectDetails details = 2;
    string name = 3;
    ProjectState state = 4;
}

//TODO: would it make sense to return
// message GrantedProject {
//     string grant_id = 1;
//     zitadel.v1.ObjectDetails details = 2;
//     zitadel.org.v1.Org org = 3;
//     Project project = 4;
// }

message GrantedProject {
    string grant_id = 1;
    string granted_org_id = 2;
    string granted_org_name = 3;
    repeated string granted_role_keys = 4;
    ProjectGrantState state = 5;
    
    string project_id = 6;
    string project_name = 7;
    string project_owner_id = 8;
    string project_owner_name = 9;

    zitadel.v1.ObjectDetails details = 10;
}

message UserGrant {
    string user_id = 1;
    string grant_id = 2;
    // zitadel.v1.ObjectDetails details = 3;
}

message UserGrantQuery {
    oneof query {
        UserGrantProjectIDQuery project_id = 1;
        UserGrantUserIDQuery user_id = 2;
        UserGrantWithGrantedQuery with_granted = 3;
        UserGrantRoleKeyQuery role_key = 4;
        UserGrantProjectGrantIDQuery project_grant_id = 5;
        UserGrantUserNameQuery user_name = 6;
        UserGrantFirstNameQuery first_name = 7;
        UserGrantLastNameQuery last_name = 8;
        UserGrantEmailQuery email = 9;
        UserGrantOrgNameQuery org_name = 10;
        UserGrantOrgDomainQuery org_domain = 11;
        UserGrantProjectNameQuery project_name = 12;
        UserGrantDisplayNameQuery display_name = 13;
    }
}

message UserGrantProjectIDQuery {
    string project_id = 1;
}

message UserGrantUserIDQuery {
    string user_id = 1;
}

message UserGrantWithGrantedQuery {
    bool with_granted = 1;
}

message UserGrantRoleKeyQuery {
    string role_key = 1;
    zitadel.v1.TextQueryMethod method = 2;
}

message UserGrantProjectGrantIDQuery {
    string project_grant_id = 1;
}

message UserGrantUserNameQuery {
    string user_name = 1;
    zitadel.v1.TextQueryMethod method = 2;
}

message UserGrantFirstNameQuery {
    string first_name = 1;
    zitadel.v1.TextQueryMethod method = 2;
}

message UserGrantLastNameQuery {
    string first_name = 1;
    zitadel.v1.TextQueryMethod method = 2;
}

//TODO: Email or login name?
message UserGrantEmailQuery {
    string first_name = 1;
    zitadel.v1.TextQueryMethod method = 2;
}

message UserGrantOrgNameQuery {
    string first_name = 1;
    zitadel.v1.TextQueryMethod method = 2;
}

message UserGrantOrgDomainQuery {
    string first_name = 1;
    zitadel.v1.TextQueryMethod method = 2;
}

message UserGrantProjectNameQuery {
    string first_name = 1;
    zitadel.v1.TextQueryMethod method = 2;
}

//TODO: needed as you can search first and last name?
message UserGrantDisplayNameQuery {
    string first_name = 1;
    zitadel.v1.TextQueryMethod method = 2;
}

enum ProjectState {
    PROJECT_STATE_UNSPECIFIED = 0;
}

enum ProjectGrantState {
    PROJECT_GRANT_STATE_UNSPECIFIED = 0;
}

message ProjectQuery {
    oneof query {
        ProjectNameQuery name = 1;
    }
}

message ProjectNameQuery {
    string name = 1;
    zitadel.v1.TextQueryMethod method = 2;
}

//TODO: seperate file
message Role {
    string key = 1;
    zitadel.v1.ObjectDetails details = 2;
    string display_name = 3;
    string group = 4;
}

//TODO: seperate file
message RoleQuery {
    oneof query {
        RoleKeyQuery key = 1;
        RoleDisplayNameQuery display_name = 2;
    }
}

message RoleKeyQuery {
    string key = 1;
    zitadel.v1.TextQueryMethod method = 2;
}

message RoleDisplayNameQuery {
    string display_name = 1;
    zitadel.v1.TextQueryMethod method = 2;
}

message ProjectGrantQuery {
    oneof query {
        GrantProjectNameQuery project_name = 1;
        GrantRoleKeyQuery role_key = 2;
    }
}

message GrantProjectNameQuery {
    string name = 1;
    zitadel.v1.TextQueryMethod method = 2;
}

message GrantRoleKeyQuery {
    string role_key = 1;
    zitadel.v1.TextQueryMethod method = 2;
}